--- a/CodeS/templates/code_list.html
+++ b/CodeS/templates/code_list.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
+{% load customtags %}
 {% block content %}
 {% load static %}
 <main id="main">
@@ -6,7 +8,6 @@
 <!-- ======= Breadcrumbs ======= -->
 <section id="breadcrumbs" class="breadcrumbs">
   <div class="container">
-
     <div class="d-flex justify-content-between align-items-center">
       <h2>Code List</h2>
       <ol>
@@ -14,34 +15,67 @@
         <li>Code List</li>
       </ol>
     </div>
-
   </div>
 </section><!-- End Breadcrumbs -->
 <div class="row content">
         <div class="col-lg-10" data-aos="fade-right">
-          <h4>Filter form to go here</h4>
-          <h5>Filters on key words / Tags</h5>
+          <h4>Search code</h4>
+            <form method="get">
+              {{ filter_form.form.as_p }}
+            <button type="submit">Filter</button>
+            </form>
         </div>
 </div>
 
 <div class="row mt-5 justify-content-center" data-aos="fade-up">
     <div class="col-lg-10">
-      {% for code in codelist %}
-          <div class="form-row">
-            <div class="col-md-5 form-group">
-              <th></th>
-                <td>
-                  {{ code.extract }}
-                  {{ form.full_name }}
-                </td>
-            </div>
-            
-          </div>
-          
-         
 
-          
-      {% endfor %}
+      {% if object_list%}
+        {% for code in object_list %}
+          <div class="form-row">
+            <div class="col-lg-7">
+                  {{ code.extract }}
+            </div>
+
+          </div>
+        {% endfor %}
+      {% else %}
+        <p>No list yet!</p>
+      {% endif %}
+      <br>
+      {% if object_list.has_other_pages %}
+        <ul class="pagination pagination-sm">
+          {% if object_list.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="? {% param_replace page=object_list.previous_page_number %}">Previous</a>
+            </li>
+          {% else %}
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+          {% endif %}
+          {% for i in object_list.paginator.page_range %}
+            {% if object_list.number == i %}
+              <li class="page-item active">
+                  <span class="page-link">{{ i }}<span class="sr-only">(current)</span>
+                  </span>
+            {% else %}
+              <li class="page-item"><a class="page-link"  href="?{% param_replace page=i %}">{{ i }}</a></li>
+            {% endif %}
+          {% endfor %}
+          {% if object_list.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="? {% param_replace page=object_list.next_page_number %}">Next</a>
+            </li>
+          {% else %}
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Next</a>
+            </li>
+          {% endif %}
+        </ul>
+      {% else %}
+        <br>
+      {% endif %}
     </div>
 </div>
 </main><!-- End #main -->
