--- a/CodeS/templates/code_list.html
+++ b/CodeS/templates/code_list.html
@@ -34,7 +34,7 @@
         {% for code in object_list %}
           <div class="form-row">
             <div class="col-lg-7">
-                  {{ code.extract }}
+                  {{code.pk}} - {{ code.extract }}
             </div>
 
           </div>
