--- a/CodeS/templates/code_list.html
+++ b/CodeS/templates/code_list.html
@@ -34,7 +34,11 @@
         {% for code in object_list %}
           <div class="form-row">
             <div class="col-lg-7">
-                  {{code.pk}} - {{ code.extract }}
+                  {{code.pk}} - {{ code.extract }} Count = 
+                  {{ code.tags_set.all.count }}
+                  {% for tag in code.tags_set.all %}
+                    {{ tag }}
+                  {% endfor %}
             </div>
 
           </div>
