--- a/CodeS/templates/base.html
+++ b/CodeS/templates/base.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <script src="https://kit.fontawesome.com/1f8531230c.js" crossorigin="anonymous"></script>-->
+-->
+  <script src="https://kit.fontawesome.com/1f8531230c.js" crossorigin="anonymous"></script>
   <title>{% block head_title %}A Sharp Systems{% endblock head_title%}</title>
   <meta content="" name="descriptions">
   <meta content="" name="keywords">
