--- a/CodeS/templates/feature_detail.html
+++ b/CodeS/templates/feature_detail.html
@@ -9,10 +9,10 @@
 <section id="breadcrumbs" class="breadcrumbs">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center">
-      <h2>Code Item</h2>
+      <h2>{{ banner_heading }}</h2>
       <ol>
         <li><a href="{% url 'lcore:home' %}">Home</a></li>
-        <li><a href="{% url 'lcore:code_list' %}">Code List</a></li>
+        <li><a href="{% url 'lcore:feature_list' %}">Code List</a></li>
       </ol>
     </div>
   </div>
