--- a/CodeS/templates/feature_list.html
+++ b/CodeS/templates/feature_list.html
@@ -9,41 +9,34 @@
 <section id="breadcrumbs" class="breadcrumbs">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center">
-      <h2>Code List</h2>
+      <h2>Application Features for testing</h2>
       <ol>
         <li><a href="{% url 'lcore:home' %}">Home</a></li>
-        <li>Code List</li>
+        <li>Features List</li>
       </ol>
     </div>
   </div>
 </section><!-- End Breadcrumbs -->
 <div class="row content">
   <div class="col-lg-10" data-aos="fade-right">
-    <h4>Search code</h4>
       <form method="get">
         {{ filter_form.form.as_p }}
-      <button type="submit">Filter</button>
+      <button type="submit">{{filter_button}}</button>
       </form>
   </div>
   <div class="col-lg-10" data-aos="fade-right">
-    <a href="{% url 'lcore:code_detail' pk=0 %}"><i class="far fa-plus-square"></i></a>
+    <a href="{% url 'lcore:feature_detail' pk=0 %}"><i class="far fa-plus-square"></i></a>
   </div>
 </div>
 
 <div class="row mt-5 justify-content-center" data-aos="fade-up">
     <div class="col-lg-10">
-      {% for code in object_list %}
+      {% for item in object_list %}
         <div class="form-row">
           <div class="col-lg-7">
-            {#<a>{{code.pk}} </a>#}
-              <a href="{% url 'lcore:code_detail' pk=code.pk %}"><i class="far fa-edit"></i></a>
-            {{ code.extract }}
-              {% if code.tags.count %} [{% endif %}
-                {% for tag in code.tags.all %}
-                  {% if forloop.counter > 1%}, {% endif %}
-                  {{ tag }}
-                {% endfor %}
-              {% if code.tags.count %}]{% endif %}
+            <a href="{% url 'lcore:feature_detail' pk=code.pk %}"><i class="far fa-edit"></i></a>
+            {{ item.description }}
+
           </div>
         </div>
       {% empty %}
