--- a/CodeS/templates/feature_detail.html
+++ b/CodeS/templates/feature_detail.html
@@ -1,16 +1,26 @@
 {% extends "base.html" %}
+{# next 4 are for the date picker  #}
+{# {% load bootstrap4 %}#}
+{# {% bootstrap_css %}         {# Embed Bootstrap CSS #}#}
+{{# % bootstrap_javascript jquery='full' %}  {# Embed Bootstrap JS+jQuery #}#}
+{#{{ form.media }}#}
+
 {% load crispy_forms_tags %}
 {% load customtags %}
 {% block content %}
 {% load static %}
 <main id="main">
-   <!-- Fengyuan Chen's Datepicker -->
+   <!-- Fengyuan Chen's Datepicker
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
-  <br>
+ --> <br>
+    <!-- XDSoft DateTimePicker
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
+-->
 <!-- ======= Breadcrumbs ======= -->
 <section id="breadcrumbs" class="breadcrumbs">
-  <div class="container">
+  <br><div class="container">
     <div class="d-flex justify-content-between align-items-center">
       <h2>{{ banner_heading }}</h2>
       <ol>
@@ -25,7 +35,7 @@
     <div class="col-lg-10">
       <form method='POST' action="" >
         {% csrf_token %}
-        {{ form|crispy }} <br/>
+        {{ form | crispy }}
         <input type='submit' class="btn btn-secondary" value = 'Submit'>
       </form>
     </p>
@@ -34,10 +44,11 @@
     </div>
 </div>
 </main><!-- End #main -->
+
 <script>
- $(function () {
+  $(function () {
     $("#id_last_test").datepicker({
-      format:'dd/mm/yyyy',
+      format: 'd/m/Y',
     });
   });
 </script>
