--- a/CodeS/templates/feature_list.html
+++ b/CodeS/templates/feature_list.html
@@ -35,7 +35,7 @@
         <div class="form-row">
           <div class="col-lg-7">
             <a href="{% url 'lcore:feature_detail' pk=item.pk %}"><i class="far fa-edit"></i></a>
-            {{ item.description }}
+            {{ item }}
 
           </div>
         </div>
