--- a/CodeS/templates/code_detail.html
+++ b/CodeS/templates/code_detail.html
@@ -20,7 +20,7 @@
 
 <div class="row mt-5 justify-content-center" data-aos="fade-up">
     <div class="col-lg-10">
-      <form method='POST' action="" >
+      <form method='POST' action="" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }} <br/>
         <input type='submit' class="btn btn-secondary" value = 'Submit'>
