--- a/CodeS/templates/code_detail.html
+++ b/CodeS/templates/code_detail.html
@@ -20,10 +20,11 @@
 
 <div class="row mt-5 justify-content-center" data-aos="fade-up">
     <div class="col-lg-10">
-      <form method='POST' action="" >
+      <form method='POST' action="" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }} <br/>
-        <input type='submit' class="btn btn-secondary" value = 'Submit'>
+        <button type="submit">Submit</button>
+        <!--<input type='submit' class="btn btn-secondary" value = 'Submit'>-->
       </form>
     </p>
     <hr/>
