--- a/CodeS/templates/about.html
+++ b/CodeS/templates/about.html
@@ -24,31 +24,18 @@
 
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-right">
-            <h2>Because life can be simpler</h2>
-            <h3>We believe in making life simpler, lightening the load of complex information and mundane activities</h3>
+            <h3>Keep usefule code snippets handy for future use</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
             <h3>
-              For us this journey started from "This does not have to be so difficult"
+              Keep code for various technologies
             </h3>
             <ul>
-              <li><i class="ri-check-double-line"></i> We can't keep doing this</li>
-              <li><i class="ri-check-double-line"></i> We have to make a change</li>
-              <li><i class="ri-check-double-line"></i> Let's do something</li>
-              <li><i class="ri-check-double-line"></i> Our vision for <---> is ....</li>
-              <li><i class="ri-check-double-line"></i> Let's start and refine / expand it along the way</li>
+              <li><i class="ri-check-double-line"></i> Python</li>
+              <li><i class="ri-check-double-line"></i> SQL</li>
+              <li><i class="ri-check-double-line"></i> VBA</li>
+              <li><i class="ri-check-double-line"></i> Django</li>
             </ul>
-            <h3>
-              Ask yourself these questions...
-            </h3>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Are we doing the the things we need to do?</li>
-              <li><i class="ri-check-double-line"></i> Is our business what we want it to be?</li>
-              <li><i class="ri-check-double-line"></i> How much of our effort is repeatedly spent redoing the same thing?</li>
-            </ul>
-            <p class="font-italic">
-              How can we make life simpler for you?
-            </p>
           </div>
         </div>
 
@@ -60,8 +47,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Our <strong>Skills</strong></h2>
-          <p>We bring a mix of skills to help your business make the journey to simplicity</p>
+          <h2>Focus areas</h2>
+          <p>Use the code snippets for multiple purposes</p>
         </div>
 
         <div class="row skills-content">
