--- a/CodeS/templates/base.html
+++ b/CodeS/templates/base.html
@@ -9,7 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 -->
   <script src="https://kit.fontawesome.com/1f8531230c.js" crossorigin="anonymous"></script>
-  <title>{% block head_title %}A Sharp Systems{% endblock head_title%}</title>
+  <title>{% block head_title %}Code Snippets{% endblock head_title%}</title>
   <meta content="" name="descriptions">
   <meta content="" name="keywords">
 
